@@ -19,6 +19,7 @@
 * Add - Add compatibility between Multi-Currency and WooCommerce UPS shipping extension.
 * Add - Add compatibility between Multi-Currency and WooCommerce FedEx shipping extension.
 * Fix - Fix decimal error with shipping calculations with Multi-Currency.
+* Fix - Allow payment_intent_succeeded webhook to handle orders without intent_id attached.
 
 = 3.1.0 - 2021-10-06 =
 * Fix - Issue affecting analytics for Multi-Currency orders made with a zero-decimal to non-zero decimal conversion.
